--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,8 @@
 
     <target name="validate">
         <sf:deploy
-            username="andrewsones+git@brightgen.com"
-            password="tester10"
+	    username="${env.sf.username}"
+	    password="${env.sf.password}"
             serverurl="https://login.salesforce.com"
             deployroot="src"
             checkonly="true"
