--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,11 @@
 <project name="sfdctest" default="validate" basedir="." xmlns:sf="antlib:com.salesforce">
 
+    <property environment="env"/>
+
     <target name="validate">
         <sf:deploy
-	    username="${env.sf.username}"
-	    password="${env.sf.password}"
+	    username="${env.username}"
+	    password="${env.password}"
             serverurl="https://login.salesforce.com"
             deployroot="src"
             checkonly="true"
