--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: java
 jdk:
         - oraclejdk8
 script: ant -lib ./lib validate
+notifications:
+        email:
+                on_success: always
+                on_failure: always
